--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#1CCC5B" />
+	<meta name="description" content="Your app to view photos of beautiful pets" />
 	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 	<title>Petgram</title>
 </head>
